--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Webconsolesite by alexscg</title>
     <!--<link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css"> -->
+	<link rel="stylesheet" href="stylesheets/main.css">
 
 	<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
+	<!-- <link rel="stylesheet" type="text/css" href="http://cdndev.dspdev.wmg.com/themes/vendor/cardiostrap/theme-min.css"/>-->
 	<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -66,7 +68,8 @@
 				<img class="pull-left" src="http://placehold.it/360x270">
 			</div>
 			<div class="col-md-8">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			
+				<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
 			</div>
 		</div>
       </section>
