--- a/index.html
+++ b/index.html
@@ -45,22 +45,19 @@
 						<li><a href="//webconsole.devportal-ci.dspdev.wmg.com">Contribute</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><button type="button" class="btn btn-success">Get Started<span class="fa fa-cogs"></span></button></li>
+						<li><button type="button" class="btn btn-success">Get Started <span class="fa fa-caret-right"></span></button></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
 	</header>
 
-	<section>
-		<div class="jumbotron">
-			<h1>Jumbotron</h1>
-			<p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-			<p><a class="btn btn-primary btn-lg">Learn more</a></p>
-		</div>
-	</section>
-	  
-    <div class="container">
+	<div class="jumbotron">
+		<h1>WebConsole</h1>
+		<p>A smart web interface for CloudFoundry v2</p>
+	</div>
+		
+	<div class="container">
 
       <section>
 		<div class="row">
