--- a/index.html
+++ b/index.html
@@ -52,20 +52,24 @@
 		</nav>
 	</header>
 
-	<div class="jumbotron">
+	<div class="jumbotron hero">
 		<h1>WebConsole</h1>
 		<p>A smart web interface for CloudFoundry v2</p>
+		<div>
+			<button type="button" class="btn btn-primary"><i class="icon-github-sign"></i> View on GitHub <span class="fa fa-github"></span></button>
+			<button type="button" class="btn btn-primary">Try Now! <span class="fa fa-caret-right"></span></button>
+		</div>
 	</div>
-		
+	
 	<div class="container">
 
       <section>
 		<div class="row">
-			<div class="col-md-4">
-				<img class="pull-left" src="http://placehold.it/360x270">
+			<div class="col-md-5">
+				<img class="pull-left screen" src="images/assets/01---Mission Control.jpg" width="400">
 			</div>
-			<div class="col-md-8">
-			
+			<div class="col-md-7">
+				<h3>Mission Control</h3>
 				<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
 			</div>
 		</div>
@@ -73,41 +77,175 @@
 
       <section>
 		<div class="row">
-			<div class="col-md-8">
+			<div class="col-md-7">
+				<h3>Spaces Control</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
-			<div class="col-md-4">
-				<img class="pull-left" src="http://placehold.it/360x270">
+			<div class="col-md-5">
+				<img class="pull-left screen" src="images/assets/02---Spaces.jpg" width="400">
 			</div>
 		</div>
       </section>
 
       <section>
 		<div class="row">
-			<div class="col-md-4">
-				<img class="pull-left" src="http://placehold.it/360x270">
+			<div class="col-md-5">
+				<img class="pull-left screen" src="images/assets/03---Applications.jpg" width="400">
 			</div>
-			<div class="col-md-8">
+			<div class="col-md-7">
+				<h3>Applications</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
 		</div>
       </section>
 
       <section>
-		<div class="row">
-			<div class="col-md-8">
+		<div class="row last">
+			<div class="col-md-7">
+				<h3>Service Instances</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
-			<div class="col-md-4">
-				<img class="pull-left" src="http://placehold.it/360x270">
+			<div class="col-md-5">
+				<img class="pull-left screen" src="images/assets/04---Service-Instances.jpg" width="400">
 			</div>
 		</div>
       </section>
 	  
-    </div>	<!-- div.container -->
-    
-	<footer>
+	</div> <!-- .container -->
 	
+	<div class="jumbotron slogan">
+		<blockquote>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+			<small>Jonathan Murray, <cite title="Source Title">Warner Music Group EVP & CTO</cite></small>
+		</blockquote>
+	</div>
+	
+	<div class="container">
+	
+      <section>
+		<div class="row">
+			<div class="col-md-5">
+				<img class="pull-left screen" src="images/assets/05---Users.jpg" width="400">
+			</div>
+			<div class="col-md-7">
+				<h3>Users</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+		</div>
+      </section>
+	  
+      <section>
+		<div class="row">
+			<div class="col-md-7">
+				<h3>Environment Variables</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+			<div class="col-md-5">
+				<img class="pull-left screen" src="images/assets/06---Environment-Variables.jpg" width="400">
+			</div>
+		</div>
+      </section>
+
+      <section>
+		<div class="row">
+			<div class="col-md-5">
+				<img class="pull-left screen" src="images/assets/07---Files.jpg" width="400">
+			</div>
+			<div class="col-md-7">
+				<h3>Files</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+		</div>
+      </section>
+
+      <section>
+		<div class="row">
+			<div class="col-md-7">
+				<h3>Instances</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+			<div class="col-md-5">
+				<img class="pull-left screen" src="images/assets/08---Instances.jpg" width="400">
+			</div>
+		</div>
+      </section>
+
+      <section>
+		<div class="row">
+			<div class="col-md-5">
+				<img class="pull-left screen" src="images/assets/09---Logs.jpg" width="400">
+			</div>
+			<div class="col-md-7">
+				<h3>Logs</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+		</div>
+      </section>
+	  
+	</div>	<!-- div.container -->
+    
+	<div class="jumbotron hero">
+		<div>
+			<button type="button" class="btn btn-success">View on GitHub <span class="fa fa-caret-right"></span></button>
+			<button type="button" class="btn btn-success">Try Now! <span class="fa fa-caret-right"></span></button>
+		</div>
+	</div>
+	
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3">
+					<ul>
+						<h4>Learn</h4>
+						<li><a href="#">ChorusCF User Guide</a></li>
+						<li><a href="#">ChorusCF Developer Guide</a></li>
+						<li><a href="#">Reverb User Guide</a></li>
+						<li><a href="#">Reverb Developer Guide</a></li>
+					</ul>
+				</div>
+				<div class="col-md-3">
+					<ul>
+						<h4>Community</h4>
+						<li><a href="#">Tweeter</a></li>
+						<li><a href="#">Google+</a></li>
+						<li><a href="#">StackOverflow</a></li>
+						<li><a href="#">Blog?</a></li>
+					</ul>
+				</div>
+				<div class="col-md-3 pull-right">
+					<ul class="icons">
+						<li>
+							<iframe src="http://ghbtns.com/github-btn.html?user=mdo&repo=github-buttons&type=watch" allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
+						</li>
+						<li>
+							<a href="https://twitter.com/share" class="twitter-share-button" data-related="jasoncosta" data-lang="en" data-size="large" data-count="none">Tweet</a>
+						</li>
+						<li>
+							<a href="https://plus.google.com/101560853443212199687?prsrc=3"
+							   rel="publisher" target="_top" style="text-decoration:none;display:inline-block;color:#333;text-align:center; font:13px/16px arial,sans-serif;white-space:nowrap;">
+							<span style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px; margin-top:8px;">ChorusCF</span><span style="display:inline-block;vertical-align:top;margin-right:15px; margin-top:8px;">on</span>
+							<img src="http://ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:32px;height:32px;"/>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<p>Code licensed under the
+					<a href="https://github.com/angular/angular.js/blob/master/LICENSE" target="_blank">The
+					  MIT License</a>. Documentation licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.
+					</p>
+					<div>Powered by <a href="http://www.wmg.com/">Warner Music Group</a> &reg;</div>
+				</div>
+				<div class="col-md-6">
+					<div class="pull-right">
+
+					</div>
+				</div>
+			</div>
+		</div>
 	</footer>
   </body>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </html>
