--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 				<div class="col-md-3">
 					<ul>
 						<h4>Community</h4>
-						<li><a href="#">Tweeter</a></li>
+						<li><a href="#">Twitter</a></li>
 						<li><a href="#">Google+</a></li>
 						<li><a href="#">StackOverflow</a></li>
 						<li><a href="#">Blog?</a></li>
